Calculate updated possibilities more functionally